Some Change in index

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     </tr>
   </table>
   <hr size='3' noshade>
-  <h3> <a href="C:\Users\Lenovo\Desktop\Full Stack Web\WEBBY\Html Personal site\Hobbies.html" target="_blank">MY HOBBIES</a></h3>
+  <h3> <a href="Hobbies.html" target="_blank">MY HOBBIES</a></h3>
 
-  <h3><a href="C:\Users\Lenovo\Desktop\Full Stack Web\WEBBY\Html Personal site\Contact.html" target="_blank">CONTACT ME</a></h3>
+  <h3><a href="Contact.html" target="_blank">CONTACT ME</a></h3>
 
 
 </body>
